--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,39 +2,36 @@
 <span>Clients</span>
 <% end %>
 
-<div class="row">
-  <div class="col m9">
-    <%= will_paginate(@clients) %>
-    <table class="highlight">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Contact person</th>
-          <th>Contact number</th>
-          <th colspan="2"></th>
-        </tr>
-      </thead>
+<%= will_paginate(@clients) %>
+<table class="highlight">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Contact person</th>
+      <th>Contact number</th>
+      <th colspan="2"></th>
+    </tr>
+  </thead>
 
-      <tbody>
-        <% @clients.each do |client| %>
-          <tr>
-            <td><%= name_link(client) %></td>
-            <td><%= client.contact_person %></td>
-            <td><%= client.contact_number %></td>
-            <td><%= link_to 'Edit', edit_client_path(client) %></td>
-            <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <%= will_paginate(@clients) %>
-  </div>
-  <div class="col m3">
-    <ul class="collection with-header">
-      <li class="collection-header"><h5>Action</h5></li>
-      <li>
-        <%= link_to "Add Client", new_client_path, class: "collection-item" %>
-      </li>
-    </ul>
-  </div>
-</div>
+  <tbody>
+    <% @clients.each do |client| %>
+      <tr>
+        <td><%= name_link(client) %></td>
+        <td><%= client.contact_person %></td>
+        <td><%= client.contact_number %></td>
+        <td><%= link_to 'Edit', edit_client_path(client) %></td>
+        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= will_paginate(@clients) %>
+
+<% content_for :side_panel do %>
+<ul class="collection with-header">
+  <li class="collection-header"><h5>Action</h5></li>
+  <li>
+    <%= link_to "Add Client", new_client_path, class: "collection-item" %>
+  </li>
+</ul>
+<% end %>
