--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,14 @@
     </div>
     <div class="content">
       <div class="container">
-        <%= yield %>
+        <div class="row">
+          <div class="col m8">
+            <%= yield %>
+          </div>
+          <div class="col m4">
+            <%= yield :side_panel %>
+          </div>
+        </div>
       </div>
     </div>
   </main>
