--- a/app/views/liquidation_categories/index.html.erb
+++ b/app/views/liquidation_categories/index.html.erb
@@ -2,16 +2,13 @@
 Liquidation Categories
 <% end %>
 
-<div class="row">
-  <div class="col m9">
-    <%= render 'shared/categories/index_list', categories: @liquidation_categories %>
-  </div>
-  <div class="col m3">
-    <ul class="collection with-header">
-      <li class="collection-header"><h5>Action</h5></li>
-      <li>
-        <%= link_to "Add Category", new_liquidation_category_path, class: "collection-item" %>
-      </li>
-    </ul>
-  </div>
-</div>
+<%= render 'shared/categories/index_list', categories: @liquidation_categories %>
+
+<% content_for :side_panel do %>
+<ul class="collection with-header">
+  <li class="collection-header"><h5>Action</h5></li>
+  <li>
+    <%= link_to "Add Category", new_liquidation_category_path, class: "collection-item" %>
+  </li>
+</ul>
+<% end %>
